[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/d_daok_cosas_strip10.png" type="Texture" id=1]
[ext_resource path="res://sprites/d_daok_piezas_strip13.png" type="Texture" id=2]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=3]
[ext_resource path="res://scenes/otros/Actividad.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/otros/Puerta.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Hospital.gd" type="Script" id=6]
[ext_resource path="res://sounds/a_poner.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.9999
height = 80.0002

[sub_resource type="Animation" id=2]
resource_name = "Go"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Cruz:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Cruz:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Hospital" type="Node2D" groups=["ediHospital", "ediffice", "nevera", "porton", "robable"]]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
position = Vector2( 4, 0 )
rotation = 1.5708
collision_layer = 9
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
position = Vector2( 7.23998e-06, 2 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Comida" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -34, -6 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 8
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Jeringa1" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 47, -69 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 2
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Jeringa2" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 45, -80 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 2
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Jeringa3" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 45, -94 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 2
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Jeringa4" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 44, -109 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 2
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Cruz" type="Sprite" parent="Imagen"]
position = Vector2( -28, -82 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -57, -116 )
hframes = 13
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Camilla1" type="Node2D" parent="Imagen" groups=["interior"]]
position = Vector2( -26, -46 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camilla2" type="Node2D" parent="Imagen" groups=["interior"]]
position = Vector2( 34, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Actividad" parent="Imagen" instance=ExtResource( 4 )]

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin2" type="Node2D" parent="Fin"]
position = Vector2( -22, -29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin3" type="Node2D" parent="Fin"]
position = Vector2( -61, -17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin4" type="Node2D" parent="Fin"]
position = Vector2( -62, 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin5" type="Node2D" parent="Fin"]
position = Vector2( -25, 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin6" type="Node2D" parent="Fin"]
position = Vector2( 29, 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin7" type="Node2D" parent="Fin"]
position = Vector2( 59, 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin8" type="Node2D" parent="Fin"]
position = Vector2( 63, -17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin9" type="Node2D" parent="Fin"]
position = Vector2( 30, -33 )
__meta__ = {
"_edit_lock_": true
}

[node name="Puerta" parent="." instance=ExtResource( 5 )]
position = Vector2( -27, 41 )

[node name="Quimicox" type="Timer" parent="."]
one_shot = true

[node name="Anima" type="AnimationPlayer" parent="."]
anims/Go = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="SPoner" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 7 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="toggled" from="Imagen/Actividad" to="." method="_on_Actividad_toggled"]
[connection signal="timeout" from="Quimicox" to="." method="_on_Quimicox_timeout"]
